[project]
name = "NewBie-LLM-Formatter"
description = "This extension automates the creation of structured XML prompts for the NewBie model by using LLM APIs to transform natural language or images into formatted descriptions. It provides specialized nodes for high-robustness prompt generation and seamless artistic style injection to enhance image generation workflows.该插件利用大语言模型 API 将自然语言或图片自动转化为适用于 NewBie 模型的结构化 XML 提示词。通过提供高度健壮的提示词生成与画面风格注入节点，它显著提升了图像生成流程的效率与效果。"
version = "1.1.5"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/SuzumiyaAkizuki/ComfyUI-NewBie-LLM-Formatter"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/SuzumiyaAkizuki/ComfyUI-NewBie-LLM-Formatter"
"Bug Tracker" = "https://github.com/SuzumiyaAkizuki/ComfyUI-NewBie-LLM-Formatter"

[tool.comfy]
PublisherId = "sakizuki"
DisplayName = "ComfyUI-NewBie-LLM-Formatter"
Icon = "https://raw.githubusercontent.com/SuzumiyaAkizuki/image/main/202512261303834.png"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

